--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -22,16 +22,17 @@
 			height: 20%;
 		}
 
-		</style>style>
+		</style>
 	</head>
 	<body>
 		<h1>Blake Wagner</h1>
 
-
 <nav class="menu">
   <ul>
     <li><a href="#">Blake</a></li>
-    <li><a href="#">Andy</a></li>
+    <li><a href="https://andy-engel.github.io/ICE_1/index.html"> Andy</a>
+
+		</li>
 
   </ul>
 </nav>
@@ -60,18 +61,33 @@
 
 <form>
 
+	<div>
+
+
 		Name:
 		<input type="text" name="name" id = "name"></label><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id = "dob"><br>
+	</div>
+	<div>
 
-		Please enter your choice of snack:<br>
+						Please enter your choice of snack:
+		<br>
 		<input type="radio" name="snack" value="pizza"> Pizza<br>
-  		<input type="radio" name="snack" value="donut"> Donut<br>
-  		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+  	<input type="radio" name="snack" value="donut"> Donut<br>
+  	<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+		<br>
+	</div>
+	<div>
 
-  		Please enter your choice of drink:<br>
-		<input type="radio" name="snack" value="coffee"> Coffee<br>
-  		<input type="radio" name="snack" value="tea"> Tea<br>
-  		<input type="radio" name="snack" value="water"> Water<br>
+						Please enter your choice of drink:
+		<br>
+		<input type="radio" name="drink" value="coffee"> Coffee<br>
+  	<input type="radio" name="drink" value="tea"> Tea<br>
+  	<input type="radio" name="drink" value="water"> Water<br>
+		</div>
+		<div>
+				<input type = "submit" value = "Submit">
+			</div>
 		</form>
+		<div>
