--- a/FINAL PROJECT/index.html
+++ b/FINAL PROJECT/index.html
@@ -59,5 +59,9 @@
 <div>
 
 
-  Don't indicate important information using color alone
-  Be as consistent and clear as possible in layout and copy
+  <h4> Guidelines: "Don't indicate important information using color alone",
+  "Be as consistent and clear as possible in layout and copy" </h4>
+
+  In the campaign pages section (“Leadership”, “FAQ”, “Headquarters”), in place of “read more” hyperlinks, there are standalone unstylized symbols/glyphs “+” (expands text)  and “-“ (collapses text). These symbols/glyphs are no larger than the associated text and are also dark in color (nearly indistinguishable from the black colored body text color), which makes its utility/functionality unclear as it does not appear to be actionable/clickable.
+
+-I would suggest making these symbols appear like buttons (give them dimension/bring them off the page), and make them about 4x their current size. The button and symbol/glyph should have high contrast to optimize readability.
