--- a/index.html
+++ b/index.html
@@ -1,162 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="FINAL PROJECT/stylesheets/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>BDW portfolio</title>
+    <title>final project</title>
   </head>
 
+
   <body>
-    <div class="wrapper">
-      <!--NAVIGATION -->
-      <nav class="main-nav">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Publications</a></li>
-          <li><a href="#">Photograpy</a></li>
-        </ul>
-      </nav>
 
-      <!-- TOP CONTAINER -->
-      <section class="top-container">
-        <header class="showcase">
+<h1> Accessibility Evaluation - Designer </h1>
 
-          <h1>Blake Wagner III</h1>
+<p> The following review is based on the University of Michigan website <a href=https://leadersandbest.umich.edu/>Leaders & Best</a>.
 
-          <a href = "#" class "btn"
+<div>
 
-          <div class="row">
-            <div class="column">
-              <img src="bw3 logo.png">
-              <img src="carrot2.jpg">
-              <img src="falls2.jpg">
-              <img src="paris.jpg">
-              <img src="nature.jpg">
-              <img src="mist.jpg">
-              <img src="paris.jpg">
-            </div>
-            <div class="column">
-              <img src="underwater.jpg">
-              <img src="ocean.jpg">
-              <img src="wedding.jpg">
-              <img src="mountainskies.jpg">
-              <img src="rocks.jpg">
-              <img src="underwater.jpg">
-            </div>
-            <div class="column">
-              <img src="wedding.jpg">
-              <img src="rocks.jpg">
-              <img src="falls2.jpg">
-              <img src="paris.jpg">
-              <img src="nature.jpg">
-              <img src="mist.jpg">
-              <img src="paris.jpg">
-            </div>
-            <div class="column">
-              <img src="underwater.jpg">
-              <img src="ocean.jpg">
-              <img src="wedding.jpg">
-              <img src="mountainskies.jpg">
-              <img src="rocks.jpg">
-              <img src="underwater.jpg">
-            </div>
-          </div>
+<h4> Guideline: "Make sure there is enough contrast between text and its background color" </h4>
 
-    </div>
+<h4> Issue 1: </h4>
 
-    <!-- WRAPPER ENDS -->
+  <p> The navbar has a very low contrast between the background and foreground. Specifically, the striped gradient background of the navbar affects the readability of the tabs.
+
+<h4> Suggestion: </h4>
+
+  <p> To improve the contrast issue with the navbar, I would suggest doing away with the stylized/stripe-patterned gradient and replacing it with a solid dark color, such as the Michigan blue; the white font titles of the tabs should yield a high contrast to optimize readability. A contrast ratio of 4.5:1 is the minimum recommended standard.
+
+<h4> Issue 2: </h4>
+
+  <p> About 3/4 down the homepage there are five image thumbnails (that appear in carrousel above), the contrast between the image titles (i.e., white font superimposed on images) and images is not high enough. The white font gets lost in the images and makes it challenging to read. Furthermore, when hovering over the images the white glow further reduces the contrast, making the text even more difficult to read (the white glow appears to have been placed in front of the text).
+
+<h4> Suggestion: </h4>
+
+  <p> To improve the contrast issue related to the images, I would suggest placing a dark-colored Gaussian film banner between the image and the text, so that the white font pops out from the image; and when hovering, I would change the white glow to a charcoal or dark-colored glow and make sure the glow is *behind* the white font.
 
 
+<h4> Guideline: "Pair values of colors together (not only hues) to increase contrast" </h4>
+
+<h4> Issue 3: </h4>
+
+  <p> The search bar at the top right of the homepage is barely identifiable. There is very low contrast between the gray color of the search bar and the ever-so-slightly-darker gray “magnifying glass” icon and the “X” icon within the search bar. Furthermore, the gray background significantly competes with the color of text inputted in search bar (i.e., the low contrast between the search bar and text inputted in search bar significantly affects readibility).
+
+<h4> Suggestion: </h4>
+
+  <p> The contrast between the search bar and the icons, as well as the contrast between the search bar and inputted text needs to be increased significantly. In lieu of pairing different hues of the search bar and icons, I would recommend pairing different values to increase contrast. A contrast ratio of 4.5:1 is the minimum recommended standard.
 
 
+<h4> Guideline: "Write good alt text for your images" </h4>
+
+<h4> Issue 1: </h4>
+
+  <p> The "Bold Ideas" large image has too long of an alt text; moreover, all the carousel linked image thumbails are missing alt text.
+
+<h4> Suggestion: </h4>
+
+  <p> I would suggest paring down the alt text of the "Bold Ideas" large image to a couple of keywords, just enough to distinguish it from other images. Also, alt text should be added to the linked image thumbnails.
+
+<div>
 
 
+  <h4> Guidelines: "Don't indicate important information using color alone",
+  "Be as consistent and clear as possible in layout and copy" </h4>
 
-    <!--<div class = "grid"> START
+  In the campaign pages section (“Leadership”, “FAQ”, “Headquarters”), in place of “read more” hyperlinks, there are standalone unstylized symbols/glyphs “+” (expands text)  and “-“ (collapses text). These symbols/glyphs are no larger than the associated text and are also dark in color (nearly indistinguishable from the black colored body text color), which makes its utility/functionality unclear as it does not appear to be actionable/clickable.
 
-      <div class = "title">Title</div>
-      <div class = "header">Header</div>
-      <div class = "sidebar">Sidebar</div>
-      <div class = "content">Content</div>
-      <div class = "footer">Footer</div>
-
-
-    <nav>
-
-  <a href="index.html">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="publications.html">Publications</a>
-  <a href="photography.html">Photography</a>
-  <a href="about.html">About</a>
-</nav>
-
-<header class="container">...</header>
-
-<a class="btn btn-alt">...</a>
-
-
-
-</body>
-
-  <body> END
-
-    <h1><a href="index.html">Blake Wagner III</a></h1>
-    <section class="container">
-    <h1>...</h1>
-
-</section>
-
-
-<section>
-
-    <section>
-      <a href="projects.html">
-      <section class="container">...</section>
-
-
-    </section>
-
-    <section>
-      <a href="publications.html">
-      <section class="container">...</section>
-
-
-    </section>
-
-    <section>
-      <a href="photography.html">
-      <section class="container">...</section>
-
-
-    </section>
-
-    <section>
-      <a href="about.html">
-      <section class="container">...</section>
-
-
-      </header>
-    </section>
-
-</section>
-
-</body>
-  </body>
-  <footer>
-
-  <nav>
-  <a href="index.html">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="publications.html">Publications</a>
-  <a href="photography.html">Photography</a>
-  <a href="about.html">About</a>
-</nav>
-
-<footer class="container">...</footer>
-
- <small>&copy; Blake Wagner III</small>
-
-</footer>
-</html>
+-I would suggest making these symbols appear like buttons (give them dimension/bring them off the page), and make them about 4x their current size. The button and symbol/glyph should have high contrast to optimize readability.
