--- a/ICE1_UPDATE/index.html
+++ b/ICE1_UPDATE/index.html
@@ -1,14 +1,3 @@
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-
-	</body>
-</html>
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -71,18 +60,20 @@
 	</div>
 	<div>
 
-						Please enter your choice of snack:
-		<br>
-		<input type="radio" name="snack" value="pizza"> Pizza<br>
+
+
+		<label for="snack">Please enter your choice of snack:</label>
+	<br>
+		<input type="radio" name="snack" value="pizza" id = "snack"> Pizza<br>
   	<input type="radio" name="snack" value="donut"> Donut<br>
   	<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
 		<br>
 	</div>
 	<div>
 
-						Please enter your choice of drink:
-		<br>
-		<label><input type="radio" name="drink" value="coffee"> Coffee</label><br>
+		<label for="drink">Please enter your choice of drink:</label>
+	<br>
+		<label><input type="radio" name="drink" value="coffee" id = "drink"> Coffee</label><br>
   	<label><input type="radio" name="drink" value="tea"> Tea<br>
   	<input type="radio" name="drink" value="water"> Water<br>
 		</div>
