--- a/ICE1_UPDATE/index.html
+++ b/ICE1_UPDATE/index.html
@@ -26,7 +26,6 @@
   </ul>
 </nav>
 
-<section>
 	<img src="images/sketch.jpg" alt="sketch">
     <img src="images/capadile.jpg" alt="capadile">
     <img src="https://vignette.wikia.nocookie.net/demigodshaven/images/4/44/Rome_Empire.jpg/revision/latest?cb=20110130213527" alt="rome map">
@@ -43,9 +42,7 @@
 <div>
 
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/uMqagO3UMbA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-
-<div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/uMqagO3UMbA" allowfullscreen></iframe>
 
 
 <form>
@@ -54,10 +51,11 @@
 
 
 		<label for="name">Name:</label>
-		<input type="text" name="name" id = "name"></label><br>
+		<input type="text" name="name" id = "name"><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id="dob"><br>
 	</div>
+
 	<div>
 
 
@@ -69,16 +67,15 @@
   	<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
 		<br>
 	</div>
-	<div>
+
 
 		<label for="drink">Please enter your choice of drink:</label>
 	<br>
-		<label><input type="radio" name="drink" value="coffee" id = "drink"> Coffee</label><br>
-  	<label><input type="radio" name="drink" value="tea"> Tea<br>
+		<input type="radio" name="drink" value="coffee" id = "drink"> Coffee</label><br>
+  	<input type="radio" name="drink" value="tea"> Tea<br>
   	<input type="radio" name="drink" value="water"> Water<br>
-		</div>
+
 		<div>
 				<input type = "submit" value = "Submit">
 			</div>
 		</form>
-		<div>
