--- a/ICE1_UPDATE/index.html
+++ b/ICE1_UPDATE/index.html
@@ -33,13 +33,8 @@
 <p>
 	A quaestor (UK: /ˈkwiːstər/, US: /ˈkwɛstər/, Latin for investigator)[1] was a public official in Ancient Rome. The position served different functions depending on the period. In the Roman Kingdom, quaestores parricidii (quaestors with judicial powers) were appointed by the king to investigate and handle murders. In the Roman Republic, quaestors (also pluralized quaestores) were elected officials that supervised the state treasury and conducted audits. It was the lowest ranking position in the cursus honorum (course of offices).
 
-<div>
-
-
 <p>
 	The cursus honorum (Latin: "course of offices") was the sequential order of public offices held by aspiring politicians in both the Roman Republic and the early Roman Empire. It was designed for men of senatorial rank. The cursus honorum comprised a mixture of military and political administration posts. Each office had a minimum age for election. There were minimum intervals between holding successive offices and laws forbade repeating an office.
-
-<div>
 
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/uMqagO3UMbA" allowfullscreen></iframe>
@@ -71,11 +66,12 @@
 
 		<label for="drink">Please enter your choice of drink:</label>
 	<br>
-		<input type="radio" name="drink" value="coffee" id = "drink"> Coffee</label><br>
+		<input type="radio" name="drink" value="coffee" id = "drink"> Coffee<br>
   	<input type="radio" name="drink" value="tea"> Tea<br>
   	<input type="radio" name="drink" value="water"> Water<br>
 
 		<div>
 				<input type = "submit" value = "Submit">
 			</div>
-		</form>
+
+</form>
